# SwaggerDocs/usercontroller.js
@@ -1,0 +1,198 @@
+/**
+ * @swagger
+ * /login:
+ *  post:
+ *      summary: Login user
+ *      description: Login user with the provided details
+ *      tags:
+ *          - Authentification
+ *      requestBody:
+ *          required: true
+ *          content:
+ *              application/json:
+ *                  schema:
+ *                      $ref: '#/components/schemas/Login'
+ *      responses:
+ *          200:
+ *              description: Login successfully.
+ *              content: 
+ *                  application/json:
+ *                      schema:
+ *                          $ref : '#/components/schemas/User'
+ *          401:
+ *              $ref: '#/components/responses/ErrorLogin'
+ *          404:
+ *              $ref: '#/components/responses/NotFound'
+ *          405:
+ *              $ref: '#/components/responses/ValidationError'
+ *          500:
+ *              description : Internal server error
+ */
+
+/**
+ * @swagger
+ * /logout:
+ *  post:
+ *      summary: Logout user
+ *      description: Logout user with the provided details
+ *      security:
+ *          - bearerAuth: []
+ *      tags:
+ *          - Authentification
+ *      requestBody:
+ *          required: false
+ *      responses:
+ *          200:
+ *              description: Logout successfully.
+ *              content: 
+ *                  application/json:
+ *                      schema:
+ *                          $ref : '#/components/schemas/User'
+ *          401:
+ *              $ref: '#/components/responses/UnauthorizedError'
+ *          404:
+ *              $ref: '#/components/responses/NotFound'
+ *          405:
+ *              $ref: '#/components/responses/ValidationError'
+ *          500:
+ *              description : Internal server error
+ */
+
+/**
+ * @swagger
+ * /user:
+ *  post:
+ *      summary: Create a new user
+ *      description : Create a new user with the provided details
+ *      tags:
+ *          - User
+ *      requestBody:
+ *          required: true
+ *          content:
+ *              application/json:
+ *                  schema:
+ *                      $ref: '#/components/schemas/User'
+ *      responses:
+ *          201:
+ *              description: User created successfully.
+ *              content: 
+ *                  application/json:
+ *                      schema:
+ *                          $ref: '#/components/schemas/User'
+ *          404:
+ *              $ref: '#/components/responses/NotFound'
+ *          405:
+ *              $ref: '#/components/responses/ValidationError'
+ *          500:
+ *              description: Internal server error
+ */
+
+/**
+ * @swagger
+ * /user/{id}:
+ *  get:
+ *      summary: find user by id
+ *      description : Create a new user with the provided details
+ *      security:
+ *          - bearerAuth: []
+ *      parameters:
+ *          - in: path
+ *            name: id
+ *            schema:
+ *              type: string
+ *            required: true
+ *            description: Object ID of the user to get
+ *      tags:
+ *          - User
+ *      responses:
+ *          200:
+ *              description: User found successfully.
+ *              content: 
+ *                  application/json:
+ *                      schema:
+ *                          $ref : '#/components/schemas/User'
+ *          401: 
+ *              $ref: '#/components/responses/UnauthorizedError'
+ *          404:
+ *              $ref: '#/components/responses/NotFound'
+ *          405:
+ *              $ref: '#/components/responses/ValidationError'
+ *          500:
+ *              description : Internal server error
+ */
+
+/**
+ * @swagger
+ * /user:
+ *  put:
+ *      summary: Update user
+ *      description : Update a user with provided
+ *      security:
+ *          - bearerAuth: []
+ *      parameters:
+ *          - in: path
+ *            name: id
+ *            schema:
+ *              type: string
+ *            required: true
+ *            description: Object ID of the user to get
+ *      tags:
+ *          - User
+ *      requestBody:
+ *          required: true
+ *          content:
+ *              application/json:
+ *                  schema:
+ *                      $ref: '#/components/schemas/User'
+ *      responses:
+ *          200:
+ *              description: User updated successfully.
+ *              content: 
+ *                  application/json:
+ *                      schema:
+ *                          $ref : '#/components/schemas/User'
+ *          401: 
+ *              $ref: '#/components/responses/UnauthorizedError'
+ *          404:
+ *              $ref: '#/components/responses/NotFound'
+ *          405:
+ *              $ref: '#/components/responses/ValidationError'
+ *          500:
+ *              description : Internal server error
+ */
+
+
+/**
+* 
+ * @swagger
+ * /user:
+ *  delete:
+ *      summary: Delete one user
+ *      description : delete one user by the ID
+ *      security:
+ *          - bearerAuth: []
+ *      parameters:
+ *          - in: path
+ *            name: id
+ *            schema:
+ *              type: string
+ *            required: true
+ *            description: Object ID of the user to delete
+ *      tags:
+ *          - User
+ *      responses:
+ *          200:
+ *              description: User deleted successfully.
+ *              content: 
+ *                  application/json:
+ *                      schema:
+ *                          $ref : '#/components/schemas/User'
+ *          403: 
+ *              $ref: '#/components/responses/UnauthorizedError'
+ *          404:
+ *              $ref: '#/components/responses/NotFound'
+ *          405:
+ *              $ref: '#/components/responses/ValidationError'
+ *          500:
+ *              description : Internal server error
+ */
